fixed github ancher overflowing when hovered over

--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 
-
-
 *{
     margin: 0;
     padding: 0;
@@ -158,8 +156,8 @@ a{
     justify-content: flex-end;
     align-items: flex-end;
 }
-#github{
-    width: 43px;
-    height: 43px;
+a img{
+    margin: 0px 20px 10px 0px ;
+    width: 30px;
+    height: 30px;
 }
-
